--- a/index.html
+++ b/index.html
@@ -6,26 +6,27 @@
   <title>Quả Cầu Tuyết Christmas 2025</title>
   <style>
     body { margin:0; overflow:hidden; background:#0a1a3a; touch-action:none; }
-    #info { position:absolute; top:20px; left:50%; transform:translateX(-50%);
-            color:#fff; font-family:Arial; font-size:16px; background:rgba(0,0,0,0.5);
-            padding:10px 20px; border-radius:20px; pointer-events:none; z-index:10; }
+    #info {
+      position:absolute; top:20px; left:50%; transform:translateX(-50%);
+      color:#fff; background:rgba(0,0,0,0.5); padding:10px 25px; border-radius:30px;
+      font-family:Arial, sans-serif; font-size:16px; pointer-events:none; z-index:10;
+    }
   </style>
 </head>
 <body>
-  <div id="info">Chạm hoặc lắc nhẹ quả cầu tuyết nhé!</div>
+  <div id="info">Chạm hoặc lắc quả cầu tuyết nhé!</div>
 
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/controls/OrbitControls.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/three@0.157.0/build/three.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/three@0.157.0/examples/js/controls/OrbitControls.js"></script>
 
   <script>
-    // ---------- CƠ BẢN ----------
     const scene = new THREE.Scene();
     scene.background = new THREE.Color(0x0a1a3a);
 
     const camera = new THREE.PerspectiveCamera(50, innerWidth/innerHeight, 0.1, 1000);
     camera.position.set(0, 0, 350);
 
-    const renderer = new THREE.WebGLRenderer({antialias:true, alpha:true});
+    const renderer = new THREE.WebGLRenderer({antialias: true});
     renderer.setSize(innerWidth, innerHeight);
     renderer.setPixelRatio(devicePixelRatio);
     document.body.appendChild(renderer.domElement);
@@ -33,31 +34,40 @@
     const controls = new THREE.OrbitControls(camera, renderer.domElement);
     controls.enableDamping = true;
     controls.dampingFactor = 0.08;
-    controls.enableZoom = true;
     controls.enablePan = false;
     controls.minDistance = 200;
     controls.maxDistance = 500;
 
-    // ---------- QUẢ CẦU KÍNH ----------
+    // ==================== QUẢ CẦU TUYẾT ====================
     const globe = new THREE.Group();
     scene.add(globe);
 
-    // Kính trong suốt + phản chiếu
+    // Kính (dùng MeshStandardMaterial + truyền ánh sáng để tương thích mọi thiết bị)
     const glass = new THREE.Mesh(
       new THREE.SphereGeometry(120, 64, 64),
-      new THREE.MeshPhysicalMaterial({
+      new THREE.MeshStandardMaterial({
         color: 0xffffff,
-        metalness: 0.1,
+        metalness: 0.05,
         roughness: 0,
-        transmission: 0.98,
-        thickness: 15,
-        clearcoat: 1,
-        clearcoatRoughness: 0,
         transparent: true,
-        opacity: 0.95
+        opacity: 0.15,
+        envMapIntensity: 1.5,
+        side: THREE.FrontSide
       })
     );
     globe.add(glass);
+
+    // Hiệu ứng kính dày (lớp kính trong)
+    const innerGlass = new THREE.Mesh(
+      new THREE.SphereGeometry(118, 64, 64),
+      new THREE.MeshStandardMaterial({
+        color: 0xffffff,
+        transparent: true,
+        opacity: 0.1,
+        side: THREE.BackSide
+      })
+    );
+    globe.add(innerGlass);
 
     // Đế gỗ
     const base = new THREE.Mesh(
@@ -67,162 +77,174 @@
     base.position.y = -150;
     globe.add(base);
 
-    // Băng rôn đỏ + chữ Christmas
+    // Dải đỏ + nhãn Christmas (dùng canvas)
     const ribbon = new THREE.Mesh(
-      new THREE.CylinderGeometry(85, 85, 15, 64, 1, false, 0, Math.PI*2),
-      new THREE.MeshStandardMaterial({color:0xc41e3a})
+      new THREE.RingGeometry(80, 90, 64),
+      new THREE.MeshStandardMaterial({color:0xc41e3a, side: THREE.DoubleSide})
     );
+    ribbon.rotation.x = -Math.PI/2;
     ribbon.position.y = -125;
     globe.add(ribbon);
 
-    const label = new THREE.Mesh(
-      new THREE.PlaneGeometry(80, 25),
-      new THREE.MeshBasicMaterial({
-        map: new THREE.CanvasTexture(createLabel("Christmas")),
-        transparent: true
-      })
-    );
-    label.position.y = -125;
-    label.rotation.x = -Math.PI/2;
-    globe.add(label);
-
-    function createLabel(text) {
+    // Canvas tạo chữ Christmas
+    function createLabelCanvas() {
       const canvas = document.createElement('canvas');
-      canvas.width = 512; canvas.height = 128;
+      canvas.width = 512;
+      canvas.height = 128;
       const ctx = canvas.getContext('2d');
-      ctx.fillStyle = '#d4af37';
+
+      // Nền vàng kim loại
+      const grad = ctx.createLinearGradient(0,0,512,128);
+      grad.addColorStop(0, '#ffdd00');
+      grad.addColorStop(1, '#b8860b');
+      ctx.fillStyle = grad;
       ctx.fillRect(0,0,512,128);
-      ctx.fillStyle = '#8b4513';
-      ctx.roundRect(20,20,472,88,20).fill();
-      ctx.fillStyle = '#ffd700';
-      ctx.font = 'bold 56px Arial';
+
+      // Viền đen
+      ctx.strokeStyle = '#333';
+      ctx.lineWidth = 8;
+      ctx.strokeRect(4,4,504,120);
+
+      // Chữ
+      ctx.fillStyle = '#8b0000';
+      ctx.font = 'bold 72px Arial';
       ctx.textAlign = 'center';
       ctx.textBaseline = 'middle';
-      ctx.fillText(text, 256, 64);
+      ctx.fillText('Christmas', 256, 64);
+
       return canvas;
     }
 
-    // ---------- CẢNH BÊN TRONG ----------
+    const labelTexture = new THREE.CanvasTexture(createLabelCanvas());
+    const label = new THREE.Mesh(
+      new THREE.PlaneGeometry(90, 28),
+      new THREE.MeshBasicMaterial({map: labelTexture, transparent:true})
+    );
+    label.position.y = -125;
+    label.position.z = 81;
+    globe.add(label);
+
+    // ==================== CẢNH BÊN TRONG ====================
     const inside = new THREE.Group();
     globe.add(inside);
 
     // Đất tuyết
     const ground = new THREE.Mesh(
       new THREE.CircleGeometry(110, 64),
-      new THREE.MeshStandardMaterial({color:0xf0f8ff, roughness:0.8})
+      new THREE.MeshStandardMaterial({color:0xf8f9fa})
     );
     ground.rotation.x = -Math.PI/2;
     ground.position.y = -80;
     inside.add(ground);
 
-    // Nhà gỗ
+    // Nhà gỗ nhỏ
     const house = new THREE.Group();
-    const walls = new THREE.Mesh(new THREE.BoxGeometry(50,40,50), new THREE.MeshStandardMaterial({color:0x8b4513}));
-    const roof = new THREE.Mesh(new THREE.ConeGeometry(60,40,4), new THREE.MeshStandardMaterial({color:0xdc143c}));
-    roof.position.y = 40;
+    const walls = new THREE.Mesh(new THREE.BoxGeometry(50,45,50), new THREE.MeshStandardMaterial({color:0x8b4513}));
+    const roof = new THREE.Mesh(new THREE.ConeGeometry(60,40,4), new THREE.MeshStandardMaterial({color:0xb22222}));
+    roof.position.y = 42;
     roof.rotation.y = Math.PI/4;
     house.add(walls, roof);
-    house.position.set(-20, -60, -20);
+    house.position.set(-15, -58, -20);
     inside.add(house);
 
-    // Người tuyết
+    // Người tuyết dễ thương
     const snowman = new THREE.Group();
-    const body1 = new THREE.Mesh(new THREE.SphereGeometry(15,32,32), new THREE.MeshStandardMaterial({color:0xffffff}));
-    const body2 = new THREE.Mesh(new THREE.SphereGeometry(11,32,32), new THREE.MeshStandardMaterial({color:0xffffff}));
-    body2.position.y = 20;
-    const head = new THREE.Mesh(new THREE.SphereGeometry(8,32,32), new THREE.MeshStandardMaterial({color:0xffffff}));
-    head.position.y = 35;
-    const hat = new THREE.Mesh(new THREE.CylinderGeometry(6,8,15,32), new THREE.MeshStandardMaterial({color:0x111111}));
-    hat.position.y = 43;
-    snowman.add(body1,body2,head,hat);
-    snowman.position.set(30, -65, 10);
+    const b1 = new THREE.Mesh(new THREE.SphereGeometry(16), new THREE.MeshStandardMaterial({color:0xffffff}));
+    const b2 = new THREE.Mesh(new THREE.SphereGeometry(12), new THREE.MeshStandardMaterial({color:0xffffff}));
+    b2.position.y = 22;
+    const head = new THREE.Mesh(new THREE.SphereGeometry(9), new THREE.MeshStandardMaterial({color:0xffffff}));
+    head.position.y = 38;
+    // Mũ + khăn
+    const hat = new THREE.Mesh(new THREE.CylinderGeometry(7,9,18), new THREE.MeshStandardMaterial({color:0x000000}));
+    hat.position.y = 46;
+    const scarf = new THREE.Mesh(new THREE.BoxGeometry(20,4,10), new THREE.MeshStandardMaterial({color:0xff0000}));
+    scarf.position.set(0,30,9);
+    snowman.add(b1,b2,head,hat,scarf);
+    snowman.position.set(35, -64, 5);
     inside.add(snowman);
 
-    // Cây thông (3 cây)
-    for(let i=0;i<3;i++){
+    // 3 cây thông ngẫu nhiên
+    for(let i=0; i<4; i++){
       const tree = new THREE.Group();
-      const trunk = new THREE.Mesh(new THREE.CylinderGeometry(5,8,25,16), new THREE.MeshStandardMaterial({color:0x8b4513}));
-      const leaves = new THREE.Mesh(new THREE.ConeGeometry(30,60,16), new THREE.MeshStandardMaterial({color:0x0f5132}));
-      leaves.position.y = 40;
-      tree.add(trunk,leaves);
-      tree.position.set(-40+40*i, -60, -40-Math.random()*20);
-      tree.scale.set(0.7+Math.random()*0.4,0.7+Math.random()*0.4,0.7+Math.random()*0.4);
+      const trunk = new THREE.Mesh(new THREE.CylinderGeometry(4,6,20), new THREE.MeshStandardMaterial({color:0x654321}));
+      const leaves = new THREE.Mesh(new THREE.ConeGeometry(25,50,8), new THREE.MeshStandardMaterial({color:0x0f5132}));
+      leaves.position.y = 35;
+      tree.add(trunk, leaves);
+      tree.position.set(-60 + i*40, -65, -30 -Math.random()*30);
+      tree.scale.setScalar(0.6 + Math.random()*0.5);
       inside.add(tree);
     }
 
-    // ---------- TUYẾT RƠI ----------
-    const snowParticles = [];
+    // ==================== TUYẾT RƠI ====================
+    const snowCount = 4000;
     const snowGeo = new THREE.BufferGeometry();
-    const snowCount = 3000;
-    const posArray = new Float32Array(snowCount * 3);
+    const positions = new Float32Array(snowCount * 3);
 
-    for(let i=0; i<snowCount*3; i+=3){
-      posArray[i]   = THREE.MathUtils.randFloatSpread(300);
-      posArray[i+1] = THREE.MathUtils.randFloatSpread(200) + 100;
-      posArray[i+2] = THREE.MathUtils.randFloatSpread(300);
+    for(let i = 0; i < snowCount * 3; i += 3){
+      positions[i]   = THREE.MathUtils.randFloatSpread(240);
+      positions[i+1] = THREE.MathUtils.randFloatSpread(300) + 100;
+      positions[i+2] = THREE.MathUtils.randFloatSpread(240);
     }
-    snowGeo.setAttribute('position', new THREE.BufferAttribute(posArray,3));
+    snowGeo.setAttribute('position', new THREE.BufferAttribute(positions, 3));
 
-    const snowMat = new THREE.PointsMaterial({
-      color: 0xffffff,
-      size: 3,
-      transparent: true,
-      opacity: 0.9,
-      blending: THREE.AdditiveBlending
-    });
-
-    const snow = new THREE.Points(snowGeo, snowMat);
+    const snow = new THREE.Points(
+      snowGeo,
+      new THREE.PointsMaterial({
+        color: 0xffffff,
+        size: 4,
+        transparent: true,
+        opacity: 0.9,
+        blending: THREE.AdditiveBlending
+      })
+    );
     globe.add(snow);
 
-    // ---------- ÁNH SÁNG ----------
-    const ambient = new THREE.AmbientLight(0xffffff, 0.6);
-    scene.add(ambient);
-    const topLight = new THREE.DirectionalLight(0xffffff, 0.8);
-    topLight.position.set(100,200,100);
-    scene.add(topLight);
+    // ==================== ÁNH SÁNG ====================
+    scene.add(new THREE.AmbientLight(0xffffff, 0.7));
+    const light = new THREE.DirectionalLight(0xffffff, 1);
+    light.position.set(100, 200, 100);
+    scene.add(light);
 
-    // ---------- LẮC QUẢ CẦU ----------
-    let shakeIntensity = 0;
+    // ==================== LẮC QUẢ CẦU ====================
+    let shake = 0;
     function shakeGlobe(){
-      shakeIntensity = 1;
-      // tăng tuyết rơi mạnh hơn khi lắc
-      snowMat.size = 5;
-      setTimeout(()=> snowMat.size = 3, 800);
+      shake = 1;
+      snow.material.size = 6;
+      setTimeout(()=> snow.material.size = 4, 1000);
     }
 
-    // Chạm / click / lắc điện thoại
+    // Click + Touch + Lắc điện thoại
     window.addEventListener('click', shakeGlobe);
     window.addEventListener('touchstart', shakeGlobe);
 
-    // Lắc điện thoại (nếu dùng trên mobile)
-    if(window.DeviceMotionEvent){
-      window.addEventListener('devicemotion', (e)=>{
-        const acc = e.accelerationIncludingGravity;
-        if(Math.abs(acc.x)+Math.abs(acc.y)+Math.abs(acc.z) > 20){
+    if (window.DeviceMotionEvent) {
+      window.addEventListener('devicemotion', e => {
+        const a = e.accelerationIncludingGravity;
+        if (a && (Math.abs(a.x) + Math.abs(a.y) + Math.abs(a.z) > 25)) {
           shakeGlobe();
         }
       });
     }
 
-    // ---------- ANIMATION ----------
-    function animate(){
+    // ==================== ANIMATION ====================
+    function animate() {
       requestAnimationFrame(animate);
 
-      // Quay nhẹ liên tục
-      globe.rotation.y += 0.003;
+      // Quay chậm
+      globe.rotation.y += 0.004;
 
-      // Lắc khi được chạm
-      if(shakeIntensity > 0){
-        globe.rotation.y += Math.sin(performance.now()*0.02)*0.03*shakeIntensity;
-        globe.rotation.x += Math.sin(performance.now()*0.015)*0.02*shakeIntensity;
-        shakeIntensity *= 0.95;
+      // Lắc khi được kích hoạt
+      if(shake > 0.01){
+        globe.rotation.y += Math.sin(performance.now() * 0.03) * 0.04 * shake;
+        globe.rotation.x += Math.sin(performance.now() * 0.02) * 0.03 * shake;
+        shake *= 0.92;
       }
 
       // Tuyết rơi
-      const positions = snow.geometry.attributes.position.array;
-      for(let i=1; i<positions.length; i+=3){
-        positions[i] -= 0.5 + shakeIntensity*2;
-        if(positions[i] < -150) positions[i] = 200;
+      const pos = snow.geometry.attributes.position.array;
+      for(let i = 1; i < pos.length; i += 3){
+        pos[i] -= 0.6 + shake * 3;
+        if(pos[i] < -150) pos[i] += 400;
       }
       snow.geometry.attributes.position.needsUpdate = true;
 
@@ -232,8 +254,8 @@
     animate();
 
     // Resize
-    window.addEventListener('resize', ()=>{
-      camera.aspect = innerWidth/innerHeight;
+    window.addEventListener('resize', () => {
+      camera.aspect = innerWidth / innerHeight;
       camera.updateProjectionMatrix();
       renderer.setSize(innerWidth, innerHeight);
     });
