--- a/index.html
+++ b/index.html
@@ -16,19 +16,30 @@
 <body>
   <div id="info">Chạm hoặc lắc quả cầu tuyết nhé!</div>
 
-  <script type="module">
-    import * as THREE from 'https://cdn.jsdelivr.net/npm/three@0.158.0/build/three.module.js';
-    import { OrbitControls } from 'https://cdn.jsdelivr.net/npm/three@0.158.0/examples/jsm/controls/OrbitControls.js';
+  <!-- DÙNG IMPORT MAP ĐỂ FIX LỖI "Failed to resolve module specifier" -->
+  <script type="importmap">
+  {
+    "imports": {
+      "three": "https://cdn.jsdelivr.net/npm/three@0.158.0/build/three.module.js",
+      "three/addons/": "https://cdn.jsdelivr.net/npm/three@0.158.0/examples/jsm/"
+    }
+  }
+  </script>
 
+  <script type="module">
+    import * as THREE from 'three';
+    import { OrbitControls } from 'three/addons/controls/OrbitControls.js';
+
+    // ==================== CƠ BẢN ====================
     const scene = new THREE.Scene();
     scene.background = new THREE.Color(0x0a1a3a);
 
-    const camera = new THREE.PerspectiveCamera(50, window.innerWidth / window.innerHeight, 0.1, 1000);
-    camera.position.set(0, 0, 350);
+    const camera = new THREE.PerspectiveCamera(50, innerWidth / innerHeight, 0.1, 1000);
+    camera.position.z = 350;
 
     const renderer = new THREE.WebGLRenderer({ antialias: true });
-    renderer.setSize(window.innerWidth, window.innerHeight);
-    renderer.setPixelRatio(window.devicePixelRatio);
+    renderer.setSize(innerWidth, innerHeight);
+    renderer.setPixelRatio(devicePixelRatio);
     document.body.appendChild(renderer.domElement);
 
     const controls = new OrbitControls(camera, renderer.domElement);
@@ -42,7 +53,7 @@
     const globe = new THREE.Group();
     scene.add(globe);
 
-    // Kính (dùng MeshStandardMaterial + truyền ánh sáng để tương thích mọi thiết bị)
+    // Kính ngoài (hiệu ứng trong suốt)
     const glass = new THREE.Mesh(
       new THREE.SphereGeometry(120, 64, 64),
       new THREE.MeshStandardMaterial({
@@ -51,25 +62,12 @@
         roughness: 0,
         transparent: true,
         opacity: 0.15,
-        envMapIntensity: 1.5,
         side: THREE.FrontSide
       })
     );
     globe.add(glass);
 
-    // Hiệu ứng kính dày (lớp kính trong)
-    const innerGlass = new THREE.Mesh(
-      new THREE.SphereGeometry(118, 64, 64),
-      new THREE.MeshStandardMaterial({
-        color: 0xffffff,
-        transparent: true,
-        opacity: 0.1,
-        side: THREE.BackSide
-      })
-    );
-    globe.add(innerGlass);
-
-    // Đế gỗ
+    // Đế gỗ + dải đỏ
     const base = new THREE.Mesh(
       new THREE.CylinderGeometry(80, 90, 60, 64),
       new THREE.MeshStandardMaterial({ color: 0x8b4513 })
@@ -77,7 +75,6 @@
     base.position.y = -150;
     globe.add(base);
 
-    // Dải đỏ + nhãn Christmas (dùng canvas)
     const ribbon = new THREE.Mesh(
       new THREE.RingGeometry(80, 90, 64),
       new THREE.MeshStandardMaterial({ color: 0xc41e3a, side: THREE.DoubleSide })
@@ -86,42 +83,23 @@
     ribbon.position.y = -125;
     globe.add(ribbon);
 
-    // Canvas tạo chữ Christmas
-    function createLabelCanvas() {
-      const canvas = document.createElement('canvas');
-      canvas.width = 512;
-      canvas.height = 128;
-      const ctx = canvas.getContext('2d');
+    // Nhãn Christmas
+    const canvas = document.createElement('canvas');
+    canvas.width = 512; canvas.height = 128;
+    const ctx = canvas.getContext('2d');
+    const grad = ctx.createLinearGradient(0,0,512,128);
+    grad.addColorStop(0,'#ffdd00'); grad.addColorStop(1,'#b8860b');
+    ctx.fillStyle = grad; ctx.fillRect(0,0,512,128);
+    ctx.strokeStyle = '#333'; ctx.lineWidth = 8; ctx.strokeRect(4,4,504,120);
+    ctx.fillStyle = '#8b0000'; ctx.font = 'bold 72px Arial';
+    ctx.textAlign = 'center'; ctx.textBaseline = 'middle';
+    ctx.fillText('Christmas', 256, 64);
 
-      // Nền vàng kim loại
-      const grad = ctx.createLinearGradient(0, 0, 512, 128);
-      grad.addColorStop(0, '#ffdd00');
-      grad.addColorStop(1, '#b8860b');
-      ctx.fillStyle = grad;
-      ctx.fillRect(0, 0, 512, 128);
-
-      // Viền đen
-      ctx.strokeStyle = '#333';
-      ctx.lineWidth = 8;
-      ctx.strokeRect(4, 4, 504, 120);
-
-      // Chữ
-      ctx.fillStyle = '#8b0000';
-      ctx.font = 'bold 72px Arial';
-      ctx.textAlign = 'center';
-      ctx.textBaseline = 'middle';
-      ctx.fillText('Christmas', 256, 64);
-
-      return canvas;
-    }
-
-    const labelTexture = new THREE.CanvasTexture(createLabelCanvas());
     const label = new THREE.Mesh(
       new THREE.PlaneGeometry(90, 28),
-      new THREE.MeshBasicMaterial({ map: labelTexture, transparent: true })
+      new THREE.MeshBasicMaterial({ map: new THREE.CanvasTexture(canvas), transparent: true })
     );
-    label.position.y = -125;
-    label.position.z = 81;
+    label.position.set(0, -125, 81);
     globe.add(label);
 
     // ==================== CẢNH BÊN TRONG ====================
@@ -129,122 +107,89 @@
     globe.add(inside);
 
     // Đất tuyết
-    const ground = new THREE.Mesh(
+    inside.add(new THREE.Mesh(
       new THREE.CircleGeometry(110, 64),
       new THREE.MeshStandardMaterial({ color: 0xf8f9fa })
-    );
-    ground.rotation.x = -Math.PI / 2;
-    ground.position.y = -80;
-    inside.add(ground);
+    ).rotateX(-Math.PI/2).position.set(0,-80,0));
 
-    // Nhà gỗ nhỏ
+    // Nhà gỗ
     const house = new THREE.Group();
-    const walls = new THREE.Mesh(new THREE.BoxGeometry(50, 45, 50), new THREE.MeshStandardMaterial({ color: 0x8b4513 }));
-    const roof = new THREE.Mesh(new THREE.ConeGeometry(60, 40, 4), new THREE.MeshStandardMaterial({ color: 0xb22222 }));
-    roof.position.y = 42;
-    roof.rotation.y = Math.PI / 4;
-    house.add(walls, roof);
-    house.position.set(-15, -58, -20);
+    house.add(new THREE.Mesh(new THREE.BoxGeometry(50,45,50), new THREE.MeshStandardMaterial({color:0x8b4513})));
+    const roof = new THREE.Mesh(new THREE.ConeGeometry(60,40,4), new THREE.MeshStandardMaterial({color:0xb22222}));
+    roof.position.y = 42; roof.rotation.y = Math.PI/4;
+    house.add(roof);
+    house.position.set(-15,-58,-20);
     inside.add(house);
 
-    // Người tuyết dễ thương
+    // Người tuyết
     const snowman = new THREE.Group();
-    const b1 = new THREE.Mesh(new THREE.SphereGeometry(16), new THREE.MeshStandardMaterial({ color: 0xffffff }));
-    const b2 = new THREE.Mesh(new THREE.SphereGeometry(12), new THREE.MeshStandardMaterial({ color: 0xffffff }));
-    b2.position.y = 22;
-    const head = new THREE.Mesh(new THREE.SphereGeometry(9), new THREE.MeshStandardMaterial({ color: 0xffffff }));
-    head.position.y = 38;
-    // Mũ + khăn
-    const hat = new THREE.Mesh(new THREE.CylinderGeometry(7, 9, 18), new THREE.MeshStandardMaterial({ color: 0x000000 }));
-    hat.position.y = 46;
-    const scarf = new THREE.Mesh(new THREE.BoxGeometry(20, 4, 10), new THREE.MeshStandardMaterial({ color: 0xff0000 }));
-    scarf.position.set(0, 30, 9);
-    snowman.add(b1, b2, head, hat, scarf);
-    snowman.position.set(35, -64, 5);
+    snowman.add(new THREE.Mesh(new THREE.SphereGeometry(16), new THREE.MeshStandardMaterial({color:0xffffff})));
+    const mid = new THREE.Mesh(new THREE.SphereGeometry(12), new THREE.MeshStandardMaterial({color:0xffffff}));
+    mid.position.y = 22; snowman.add(mid);
+    const head = new THREE.Mesh(new THREE.SphereGeometry(9), new THREE.MeshStandardMaterial({color:0xffffff}));
+    head.position.y = 38; snowman.add(head);
+    const hat = new THREE.Mesh(new THREE.CylinderGeometry(7,9,18), new THREE.MeshStandardMaterial({color:0x000}));
+    hat.position.y = 46; snowman.add(hat);
+    const scarf = new THREE.Mesh(new THREE.BoxGeometry(20,4,10), new THREE.MeshStandardMaterial({color:0xff0000}));
+    scarf.position.set(0,30,9); snowman.add(scarf);
+    snowman.position.set(35,-64,5);
     inside.add(snowman);
 
-    // 3 cây thông ngẫu nhiên
-    for (let i = 0; i < 4; i++) {
+    // Cây thông
+    for(let i=0; i<4; i++){
       const tree = new THREE.Group();
-      const trunk = new THREE.Mesh(new THREE.CylinderGeometry(4, 6, 20), new THREE.MeshStandardMaterial({ color: 0x654321 }));
-      const leaves = new THREE.Mesh(new THREE.ConeGeometry(25, 50, 8), new THREE.MeshStandardMaterial({ color: 0x0f5132 }));
-      leaves.position.y = 35;
-      tree.add(trunk, leaves);
-      tree.position.set(-60 + i * 40, -65, -30 - Math.random() * 30);
-      tree.scale.setScalar(0.6 + Math.random() * 0.5);
+      tree.add(new THREE.Mesh(new THREE.CylinderGeometry(4,6,20), new THREE.MeshStandardMaterial({color:0x654321})));
+      const leaves = new THREE.Mesh(new THREE.ConeGeometry(25,50,8), new THREE.MeshStandardMaterial({color:0x0f5132}));
+      leaves.position.y = 35; tree.add(leaves);
+      tree.position.set(-60+i*40, -65, -30-Math.random()*30);
+      tree.scale.setScalar(0.6+Math.random()*0.5);
       inside.add(tree);
     }
 
     // ==================== TUYẾT RƠI ====================
-    const snowCount = 4000;
-    const snowGeo = new THREE.BufferGeometry();
-    const positions = new Float32Array(snowCount * 3);
-
-    for (let i = 0; i < snowCount * 3; i += 3) {
-      positions[i] = THREE.MathUtils.randFloatSpread(240);
-      positions[i + 1] = THREE.MathUtils.randFloatSpread(300) + 100;
-      positions[i + 2] = THREE.MathUtils.randFloatSpread(240);
-    }
-    snowGeo.setAttribute('position', new THREE.BufferAttribute(positions, 3));
-
     const snow = new THREE.Points(
-      snowGeo,
-      new THREE.PointsMaterial({
-        color: 0xffffff,
-        size: 4,
-        transparent: true,
-        opacity: 0.9,
-        blending: THREE.AdditiveBlending
-      })
+      new THREE.BufferGeometry().setAttribute('position', new THREE.BufferAttribute(new Float32Array(4000*3), 3)),
+      new THREE.PointsMaterial({color:0xffffff, size:4, transparent:true, opacity:0.9, blending:THREE.AdditiveBlending})
     );
+    const pos = snow.geometry.attributes.position.array;
+    for(let i=0; i<pos.length; i+=3){
+      pos[i]   = THREE.MathUtils.randFloatSpread(240);
+      pos[i+1] = THREE.MathUtils.randFloatSpread(300) + 100;
+      pos[i+2] = THREE.MathUtils.randFloatSpread(240);
+    }
     globe.add(snow);
 
-    // ==================== ÁNH SÁNG ====================
+    // Ánh sáng
     scene.add(new THREE.AmbientLight(0xffffff, 0.7));
-    const light = new THREE.DirectionalLight(0xffffff, 1);
-    light.position.set(100, 200, 100);
-    scene.add(light);
+    scene.add(new THREE.DirectionalLight(0xffffff, 1).position.set(100,200,100));
 
-    // ==================== LẮC QUẢ CẦU ====================
+    // ==================== LẮC & TUYẾT ====================
     let shake = 0;
-    function shakeGlobe() {
-      shake = 1;
-      snow.material.size = 6;
-      setTimeout(() => (snow.material.size = 4), 1000);
-    }
+    const shakeGlobe = () => { shake = 1; snow.material.size = 6; setTimeout(()=>snow.material.size=4,1000); };
 
-    // Click + Touch + Lắc điện thoại
     window.addEventListener('click', shakeGlobe);
     window.addEventListener('touchstart', shakeGlobe);
-
-    if (window.DeviceMotionEvent) {
-      window.addEventListener('devicemotion', (e) => {
+    if(window.DeviceMotionEvent){
+      window.addEventListener('devicemotion', e=>{
         const a = e.accelerationIncludingGravity;
-        if (a && Math.abs(a.x) + Math.abs(a.y) + Math.abs(a.z) > 25) {
-          shakeGlobe();
-        }
+        if(a && Math.abs(a.x)+Math.abs(a.y)+Math.abs(a.z)>25) shakeGlobe();
       });
     }
 
-    // ==================== ANIMATION ====================
-    function animate() {
+    // ==================== ANIMATE ====================
+    function animate(){
       requestAnimationFrame(animate);
 
-      // Quay chậm
       globe.rotation.y += 0.004;
-
-      // Lắc khi được kích hoạt
-      if (shake > 0.01) {
-        globe.rotation.y += Math.sin(performance.now() * 0.03) * 0.04 * shake;
-        globe.rotation.x += Math.sin(performance.now() * 0.02) * 0.03 * shake;
+      if(shake>0.01){
+        globe.rotation.y += Math.sin(performance.now()*0.03)*0.04*shake;
+        globe.rotation.x += Math.sin(performance.now()*0.02)*0.03*shake;
         shake *= 0.92;
       }
 
-      // Tuyết rơi
-      const pos = snow.geometry.attributes.position.array;
-      for (let i = 1; i < pos.length; i += 3) {
-        pos[i] -= 0.6 + shake * 3;
-        if (pos[i] < -150) pos[i] += 400;
+      for(let i=1; i<pos.length; i+=3){
+        pos[i] -= 0.6 + shake*3;
+        if(pos[i] < -150) pos[i] += 400;
       }
       snow.geometry.attributes.position.needsUpdate = true;
 
@@ -253,11 +198,10 @@
     }
     animate();
 
-    // Resize
-    window.addEventListener('resize', () => {
-      camera.aspect = window.innerWidth / window.innerHeight;
+    window.addEventListener('resize', ()=>{
+      camera.aspect = innerWidth/innerHeight;
       camera.updateProjectionMatrix();
-      renderer.setSize(window.innerWidth, window.innerHeight);
+      renderer.setSize(innerWidth, innerHeight);
     });
   </script>
 </body>
