--- a/index.html
+++ b/index.html
@@ -3,22 +3,22 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-  <title>Quả Cầu Tuyết Giáng Sinh 2025 – Bí Mật Siêu To</title>
+  <title>Quả Cầu Tuyết Giáng Sinh 2025 – Bí Mật Siêu Đẹp</title>
   <style>
     body { margin:0; overflow:hidden; background:#000; touch-action:none; }
-    #info { position:absolute; top:20px; left:50%; transform:translateX(-50%); color:#fff; background:rgba(0,0,0,0.7); padding:12px 40px; border-radius:40px; font-size:18px; pointer-events:none; z-index:100; box-shadow:0 0 20px #0ff; }
+    #info { position:absolute; top:20px; left:50%; transform:translateX(-50%); color:#fff; background:rgba(0,0,0,0.7); padding:12px 40px; border-radius:40px; font-size:18px; pointer-events:none; z-index:100; box-shadow:0 0 20px cyan; }
     #finalImage { position:fixed; inset:0; background:rgba(0,0,0,0.98); display:none; align-items:center; justify-content:center; z-index:998; }
-    #finalImage img { max-width:92%; max-height:92%; border-radius:20px; box-shadow:0 0 60px #fff; }
-    #gift { position:absolute; bottom:80px; left:50%; transform:translateX(-50%) scale(0); cursor:pointer; z-index:99; transition:all 0.8s; }
-    #merry { position:fixed; inset:0; color:#ff0066; font-size:100px; font-weight:bold; display:flex; align-items:center; justify-content:center; flex-direction:column; opacity:0; pointer-events:none; z-index:999; text-shadow:0 0 60px #f00; transition:opacity 3s; }
-    #merry span { font-size:60px; color:#0ff; margin-top:30px; text-shadow:0 0 40px #0ff; }
+    #finalImage img { width:100vw; height:100vh; object-fit:contain; }
+    #gift { position:absolute; bottom:80px; left:50%; transform:translateX(-50%) scale(0); cursor:pointer; z-index:99; transition:transform 1s ease; width:220px; }
+    #merry { position:fixed; inset:0; color:#ff0066; font-size:90px; font-weight:bold; display:flex; align-items:center; justify-content:center; flex-direction:column; opacity:0; pointer-events:none; z-index:999; text-shadow:0 0 60px red; transition:opacity 3s; }
+    #merry span { font-size:60px; color:#0ff; margin-top:30px; text-shadow:0 0 40px cyan; }
   </style>
 </head>
 <body>
   <div id="info">Chạm vào quả cầu <span id="count">0</span>/3 lần...</div>
   <div id="finalImage"><img src="image.jpg" alt="Merry Christmas"></div>
-  <img id="gift" src="https://i.imgur.com/2lYh1oO.png" width="220">
-  <div id="merry">MERRY CHRISTMAS 2025!<br><span>Chúc bạn một năm mới hạnh phúc!</span></div>
+  <img id="gift" src="https://i.imgur.com/2lYh1oO.png">
+  <div id="merry">MERRY CHRISTMAS 2025!<br><span>Chúc bạn một năm mới thật hạnh phúc!</span></div>
 
   <script type="importmap">
   { "imports": { "three": "https://cdn.jsdelivr.net/npm/three@0.158.0/build/three.module.js", "three/addons/": "https://cdn.jsdelivr.net/npm/three@0.158.0/examples/jsm/" } }
@@ -41,58 +41,47 @@
     const glass = new THREE.Mesh(new THREE.SphereGeometry(120,64,64), new THREE.MeshStandardMaterial({color:0xffffff, metalness:0.1, roughness:0, transparent:true, opacity:0.22}));
     globe.add(glass);
 
-    // Đế gỗ + dải đỏ
+    // Đế gỗ + dải đỏ + nhãn Christmas
     const base = new THREE.Mesh(new THREE.CylinderGeometry(84,94,64,64), new THREE.MeshStandardMaterial({color:0x8b4513})); base.position.y=-150; globe.add(base);
-    const ribbon = new THREE.Mesh(new THREE.RingGeometry(82,94,64), new THREE.MeshStandardMaterial({color:0xc41e3a, side:THREE.DoubleSide}));
-    ribbon.rotation.x=-Math.PI/2; ribbon.position.y=-125; globe.add(ribbon);
-
-    // Nhãn Christmas vàng óng
+    const ribbon = new THREE.Mesh(new THREE.RingGeometry(82,94,64), new THREE.MeshStandardMaterial({color:0xc41e3a, side:THREE.DoubleSide})); ribbon.rotation.x=-Math.PI/2; ribbon.position.y=-125; globe.add(ribbon);
     const canvas=document.createElement('canvas'); canvas.width=512; canvas.height=128;
     const ctx=canvas.getContext('2d');
     const grad=ctx.createLinearGradient(0,0,512,128); grad.addColorStop(0,'#ffd700'); grad.addColorStop(1,'#b8860b');
-    ctx.fillStyle=grad; ctx.fillRect(0,0,512,128);
-    ctx.strokeStyle='#333'; ctx.lineWidth=10; ctx.strokeRect(8,8,496,112);
-    ctx.fillStyle='#8b0000'; ctx.font='bold 80px Arial'; ctx.textAlign='center'; ctx.textBaseline='middle';
-    ctx.fillText('Christmas',256,64);
+    ctx.fillStyle=grad; ctx.fillRect(0,0,512,128); ctx.strokeStyle='#333'; ctx.lineWidth=10; ctx.strokeRect(8,8,496,112);
+    ctx.fillStyle='#8b0000'; ctx.font='bold 80px Arial'; ctx.textAlign='center'; ctx.textBaseline='middle'; ctx.fillText('Christmas',256,64);
     const label = new THREE.Mesh(new THREE.PlaneGeometry(96,32), new THREE.MeshBasicMaterial({map:new THREE.CanvasTexture(canvas), transparent:true}));
     label.position.set(0,-125,83); globe.add(label);
 
-    // CẢNH BÊN TRONG – ĐẦY ĐỦ NHƯ BẢN ĐẸP NHẤT
+    // Cảnh bên trong – đầy đủ
     const inside = new THREE.Group(); globe.add(inside);
-
-    // Đất tuyết
     inside.add(new THREE.Mesh(new THREE.CircleGeometry(114,64), new THREE.MeshStandardMaterial({color:0xf8faff})).rotateX(-Math.PI/2).position.set(0,-80,0));
 
     // Nhà gỗ
     const house = new THREE.Group();
     house.add(new THREE.Mesh(new THREE.BoxGeometry(54,50,54), new THREE.MeshStandardMaterial({color:0x8b4513})));
     const roof = new THREE.Mesh(new THREE.ConeGeometry(66,44,4), new THREE.MeshStandardMaterial({color:0xb22222})); roof.position.y=47; roof.rotation.y=Math.PI/4; house.add(roof);
-    const door = new THREE.Mesh(new THREE.BoxGeometry(14,26,2), new THREE.MeshStandardMaterial({color:0x654321})); door.position.set(0,-11,27.1); house.add(door);
     house.position.set(-20,-55,-15); inside.add(house);
 
-    // Người tuyết siêu dễ thương
+    // Người tuyết
     const snowman = new THREE.Group();
-    const body1 = new THREE.Mesh(new THREE.SphereGeometry(18), new THREE.MeshStandardMaterial({color:0xffffff})); snowman.add(body1);
-    const body2 = new THREE.Mesh(new THREE.SphereGeometry(14), new THREE.MeshStandardMaterial({color:0xffffff})); body2.position.y=25; snowman.add(body2);
+    snowman.add(new THREE.Mesh(new THREE.SphereGeometry(18), new THREE.MeshStandardMaterial({color:0xffffff})));
+    const b2 = new THREE.Mesh(new THREE.SphereGeometry(14), new THREE.MeshStandardMaterial({color:0xffffff})); b2.position.y=25; snowman.add(b2);
     const head = new THREE.Mesh(new THREE.SphereGeometry(10), new THREE.MeshStandardMaterial({color:0xffffff})); head.position.y=43; snowman.add(head);
     const hat = new THREE.Mesh(new THREE.CylinderGeometry(9,11,22), new THREE.MeshStandardMaterial({color:0x000000})); hat.position.y=52; snowman.add(hat);
-    const hatTop = new THREE.Mesh(new THREE.CylinderGeometry(13,13,5), new THREE.MeshStandardMaterial({color:0x000000})); hatTop.position.y=65; snowman.add(hatTop);
     const scarf = new THREE.Mesh(new THREE.BoxGeometry(26,6,14), new THREE.MeshStandardMaterial({color:0xff0000})); scarf.position.set(0,34,11); snowman.add(scarf);
     snowman.position.set(40,-62,10); inside.add(snowman);
 
-    // 4 cây thông xanh mướt
+    // 4 cây thông
     for(let i=0;i<4;i++){
       const tree = new THREE.Group();
       const trunk = new THREE.Mesh(new THREE.CylinderGeometry(5,7,24), new THREE.MeshStandardMaterial({color:0x654321}));
-      const leaves = new THREE.Mesh(new THREE.ConeGeometry(30,60,12), new THREE.MeshStandardMaterial({color:0x0f5132})); leaves.position.y=42;
-      tree.add(trunk, leaves);
+      const leaves = new THREE.Mesh(new THREE.ConeGeometry(30,60,12), new THREE.MeshStandardMaterial({color:0x0f5132})); leaves.position.y=42; tree.add(trunk); tree.add(leaves);
       tree.position.set(-70+i*50,-64,-40-Math.random()*30);
       tree.scale.setScalar(0.6+Math.random()*0.5);
-      tree.rotation.y = Math.random()*Math.PI;
       inside.add(tree);
     }
 
-    // Tuyết rơi 7000 hạt
+    // Tuyết rơi
     const snowCount=7000;
     const snowGeo=new THREE.BufferGeometry();
     const posArray=new Float32Array(snowCount*3);
@@ -108,7 +97,7 @@
     scene.add(new THREE.AmbientLight(0xffffff,0.8));
     scene.add(new THREE.DirectionalLight(0xffffff,1.5).position.set(120,250,100));
 
-    // ==================== HIỆU ỨNG ====================
+    // Biến trạng thái
     let clickCount=0, spinSpeed=0, shake=0, isExploded=false, giftClicks=0;
     const countDisplay=document.getElementById('count');
     const fragments=[];
@@ -137,6 +126,7 @@
       isExploded=true;
       document.getElementById('info').style.opacity=0;
 
+      // Mảnh kính vỡ
       for(let i=0;i<280;i++){
         const s=6+Math.random()*18;
         const f=new THREE.Mesh(new THREE.PlaneGeometry(s,s), new THREE.MeshPhysicalMaterial({color:0xffffff,metalness:0.95,roughness:0.05,transmission:0.98,thickness:5,transparent:true,opacity:0.9}));
@@ -152,12 +142,16 @@
       for(let i=1;i<pos.length;i+=3) pos[i]=180+Math.random()*150;
       snow.geometry.attributes.position.needsUpdate=true;
 
+      // Hiện ảnh + nhạc
       setTimeout(()=>{document.getElementById('finalImage').style.display='flex'; new Audio('music.mp3').play().catch(()=>{});},1800);
-      setTimeout(()=>document.getElementById('gift').style.transform='translateX(-50%) scale(1)',4000);
+      // Hiện hộp quà
+      setTimeout(()=>{document.getElementById('gift').style.transform='translateX(-50%) scale(1)';},4000);
     }
 
     const giftBox = document.getElementById('gift');
-    giftBox.onclick = giftBox.ontouchstart = (e)=>{
+    giftBox.addEventListener('click', handleGiftClick);
+    giftBox.addEventListener('touchstart', handleGiftClick);
+    function handleGiftClick(e){
       e.stopPropagation();
       if(giftClicks<3){
         giftClicks++;
@@ -165,19 +159,22 @@
         setTimeout(()=>giftBox.style.transform='translateX(-50%) scale(1)',200);
         if(giftClicks===3) setTimeout(openGift,800);
       }
-    };
+    }
 
     function openGift(){
       giftBox.style.opacity=0;
       const santaTex = new THREE.TextureLoader().load('https://i.imgur.com/9b2Z9Zk.png');
       const santa = new THREE.Mesh(new THREE.PlaneGeometry(120,160), new THREE.MeshBasicMaterial({map:santaTex,transparent:true}));
-      santa.position.set(0,-100,0); scene.add(santa);
+      santa.position.set(0,-100,0);
+      scene.add(santa);
 
+      let z = 0;
       const fly = setInterval(()=>{
         santa.position.y += 10;
-        santa.position.z -= 8;
+        z -= 8;
+        santa.position.z = z;
         santa.scale.setScalar(santa.scale.x * 1.04);
-        if(santa.position.z < -150){
+        if(z < -150){
           clearInterval(fly);
           new Audio('music2.mp3').play().catch(()=>{});
           setTimeout(()=>document.getElementById('merry').style.opacity=1,1000);
